--- a/프로그래머스_과제테스트_전우민/src/style.css
+++ b/프로그래머스_과제테스트_전우민/src/style.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: "Goyang";
-  src: url("fonts/Goyang.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 html {
   box-sizing: border-box;
 }
@@ -70,6 +63,7 @@ body * {
   display: inline-block;
   margin: 0 0 1em;
   width: 100%;
+  height: 300px;
 }
 
 .SearchInput {
@@ -85,6 +79,8 @@ body * {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: 1s;
 }
 
 .ImageInfo .title {
@@ -137,12 +133,3 @@ body * {
 .RandomButton {
   margin-left: 10px;
 }
-
-/* dark mode 처리
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #000;
-    color: white;
-  }
-}
-*?
