--- a/프로그래머스_과제테스트_전우민/style.css
+++ b/프로그래머스_과제테스트_전우민/style.css
@@ -133,3 +133,39 @@ body * {
 .RandomButton {
   margin-left: 10px;
 }
+
+.Banner {
+  display: flex;
+}
+
+.Banner button {
+  width: 100px;
+  font-size: 40px;
+}
+
+.Banner .slide-box {
+  height: 200px;
+  overflow: hidden;
+}
+
+.Banner .slide-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  transition: 0.5s;
+}
+
+.Banner .slide-content {
+  list-style: none;
+  height: 200px;
+}
+
+.Banner img {
+  width: 100%;
+  height: 100%;
+}
+
+[data-theme="dark"] * {
+  background-color: black;
+  color: white;
+}
